// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-bdvvaa sc-gsDJrp eFkyaP bHbRuQ"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-bdvvaa sc-gsDJrp czzViM bHbRuQ"
>
  foo
</button>
`;
